--- a/src/renderer/assets/styles/elements/_input.scss
+++ b/src/renderer/assets/styles/elements/_input.scss
@@ -16,7 +16,7 @@ textarea {
 
 .button,
 input {
-	padding: (0.75 * $spacing-small) $spacing-small;
+	padding: (0.75 * $spacing-medium) $spacing-medium;
 	line-height: 1;
 }
 
