--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 1;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -36,7 +37,7 @@
 
 	h1,
 	p {
-		margin-bottom: $spacing-small;
+		margin-bottom: $spacing-medium;
 	}
 }
 
