Fix lint-staged setup

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -12,7 +12,7 @@ $themes: (
 		"text": #353535,
 		"text-disabled": #c2c2c2,
 		"text-faded": #727272,
-		"text-placeholder": #757575
+		"text-placeholder": #757575,
 	),
 	"dark": (
 		"background": #242326,
@@ -26,8 +26,8 @@ $themes: (
 		"text": #d0d0d0,
 		"text-disabled": #4e4e4e,
 		"text-faded": #a1a1a1,
-		"text-placeholder": #757575
-	)
+		"text-placeholder": #757575,
+	),
 ) !default;
 
 // Fonts
