--- a/src/renderer/assets/styles/components/_search.scss
+++ b/src/renderer/assets/styles/components/_search.scss
@@ -1,7 +1,8 @@
 .search-input-wrapper {
 	position: relative;
+	flex: 1;
 	width: 100%;
-	margin-right: $spacing-medium;
+	margin-right: $spacing-small;
 }
 
 .search-input {
