--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -2,6 +2,7 @@
 	@include background-color("background-editor");
 	position: relative;
 	border-radius: $border-radius-input;
+	box-shadow: $box-shadow-inset;
 }
 
 .editor-scrollable {
