--- a/src/renderer/assets/styles/components/_calendar.scss
+++ b/src/renderer/assets/styles/components/_calendar.scss
@@ -86,4 +86,5 @@
 
 .DayPicker-Day--selected {
 	color: #ffffff !important; // stylelint-disable-line declaration-no-important
+	box-shadow: $box-shadow;
 }
