--- a/src/renderer/assets/styles/components/_calendar.scss
+++ b/src/renderer/assets/styles/components/_calendar.scss
@@ -42,8 +42,8 @@
 .DayPicker-Day,
 .DayPicker-Weekday {
 	display: flex;
-	justify-content: center;
 	align-items: center;
+	justify-content: center;
 }
 
 .DayPicker-WeekdaysRow {
@@ -82,6 +82,12 @@
 .DayPicker-Day--hasEntry {
 	@include color("main");
 	font-weight: $font-weight-bold;
+}
+
+.DayPicker-Day--today {
+	@include border-color("main");
+	border-style: solid;
+	border-width: 2px;
 }
 
 .DayPicker-Day--selected {
