Improve aspect on large screens
Restore box shadow. Add editor-buttons-width scss variable

Responsive editor adjustment

Remove unneeded editor-scrollable max width constraint

Co-Authored-By: Samuel Meuli <me@samuelmeuli.com>

Typography and increase  editor padding.

Add media query variables

Improve aspect on large screens

Restore box shadow. Add editor-buttons-width scss variable

Merge

Remove unneeded editor-scrollable max width constraint

Co-Authored-By: Samuel Meuli <me@samuelmeuli.com>

Update src/renderer/assets/styles/components/_editor.scss

Co-Authored-By: Samuel Meuli <me@samuelmeuli.com>

--- a/src/renderer/assets/styles/components/_diary.scss
+++ b/src/renderer/assets/styles/components/_diary.scss
@@ -1,9 +1,10 @@
 .diary {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	height: 100%;
 
-	@media (max-width: 650px) {
+	@media (max-width: $screen-tablet) {
 		flex-direction: column;
 		margin: 0 auto;
 		padding: 2 * $spacing-large;
@@ -19,7 +20,7 @@
 		}
 	}
 
-	@media (min-width: 651px) {
+	@media (min-width: $screen-tablet + 1px) {
 		padding: $spacing-rel-large;
 
 		.sidebar {
@@ -30,6 +31,10 @@
 			height: 100%;
 			margin-left: $spacing-rel-large;
 		}
+	}
+
+	@media (min-width: $screen-large) {
+		padding: $spacing-rel-small;
 	}
 
 	.sidebar {
