--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -33,7 +33,8 @@ $themes: (
 // Fonts
 $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
 	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-size: 16px;
+$font-size-base: 16px;
+$font-size-h1: 150%;
 $font-weight-normal: 400;
 $font-weight-semibold: 500;
 $font-weight-bold: 700;
