--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -4,8 +4,8 @@
 	left: 0;
 	z-index: 1;
 	display: flex;
-	justify-content: center;
 	align-items: center;
+	justify-content: center;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
@@ -27,18 +27,18 @@
 
 	.overlay-content {
 		padding: $spacing-rel-small;
+
+		h1,
+		p {
+			margin-bottom: $spacing-medium;
+		}
 	}
 }
 
 // Import overlay
 
 .import-overlay {
-	width: 600px;
-
-	h1,
-	p {
-		margin-bottom: $spacing-medium;
-	}
+	width: 500px;
 }
 
 // Preferences overlay
@@ -46,5 +46,23 @@
 .fieldset-file-dir {
 	p {
 		word-break: break-all;
+	}
+}
+
+// Statistics overlay
+
+.stats-overlay {
+	td {
+		vertical-align: baseline;
+	}
+
+	.stat-number {
+		padding-right: $spacing-small;
+		font-size: $font-size-h1;
+		text-align: right;
+	}
+
+	.stat-label {
+		@include color("text-faded");
 	}
 }
