Fix hover color of current day in calendar

--- a/src/renderer/assets/styles/components/_calendar.scss
+++ b/src/renderer/assets/styles/components/_calendar.scss
@@ -88,6 +88,10 @@
 	@include border-color("main");
 	border-style: solid;
 	border-width: 2px;
+
+	&:hover {
+		@include border-color("main-hover");
+	}
 }
 
 .DayPicker-Day--selected {
