--- a/website/styles/styles.css
+++ b/website/styles/styles.css
@@ -1,34 +1,44 @@
 /* Style reset */
-
-@import "minireset.min.css";
-
-/* Global styles */
+@import "./minireset.min.css";
 
 body {
-	/* Variables */
-	--color-background-grey: #242326;
-	--color-background-white: #f1f1f1;
+	/* General variables */
+	--color-background-footer: #242326;
 	--color-main: #4e8bd2;
 	--color-main-hover: #447ab8;
-	--color-selection: #b7cbe4;
-	--color-text: #4e4e4e;
 	--color-text-button: #f1f1f1;
-	--color-text-dark: #212121;
 	--color-text-header: #d8d8d8;
 	--color-text-footer: #939ea7;
 	--color-text-footer-hover: #b7bec5;
-	--spacing-abs-medium: 35px;
 	--spacing-abs-small: 23px;
-	--spacing-rel-large: 8vw;
-	--spacing-rel-medium: 4vw;
+	--spacing-abs-medium: 35px;
 	--spacing-rel-small: 2vw;
+	--spacing-rel-medium: 4vw;
+	--spacing-rel-large: 8vw;
 	--transition: 0.2s;
-	color: var(--color-text);
 
+	/* Light theme variables */
+	--color-background: #f1f1f1;
+	--color-selection: #b7cbe4;
+	--color-text: #4e4e4e;
+	--color-text-heading: #212121;
+
+	/* Global styles */
+	color: var(--color-text);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial",
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	line-height: 1.6;
-	background: var(--color-background-white);
+	background: var(--color-background);
+}
+
+/* Dark theme variable overrides */
+@media (prefers-color-scheme: dark) {
+	body {
+		--color-background: #4b4b4b;
+		--color-selection: #b7cbe4;
+		--color-text: #d0d0d0;
+		--color-text-heading: #ffffff;
+	}
 }
 
 /* Layout */
@@ -48,8 +58,8 @@ body {
 header {
 	padding: var(--spacing-rel-medium) 0;
 	text-align: center;
-	background: var(--color-background-grey);
-	background: linear-gradient(335deg, var(--color-background-grey) 0%, var(--color-main) 100%);
+	background: var(--color-background-footer);
+	background: linear-gradient(335deg, var(--color-background-footer) 0%, var(--color-main) 100%);
 	box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -60,7 +70,7 @@ main {
 footer {
 	padding: var(--spacing-rel-medium) 0;
 	text-align: center;
-	background: var(--color-background-grey);
+	background: var(--color-background-footer);
 }
 
 .centered {
@@ -90,7 +100,7 @@ h2,
 }
 
 h2 {
-	color: var(--color-text-dark);
+	color: var(--color-text-heading);
 }
 
 a {
@@ -118,7 +128,7 @@ footer a:hover {
 }
 
 main a {
-	color: var(--color-text-dark);
+	color: var(--color-text-heading);
 	font-weight: 500;
 }
 
@@ -221,8 +231,4 @@ footer svg {
 
 .feature div {
 	flex: 1;
-}
-
-.terms {
-	margin-top: var(--spacing-abs-small);
 }
