--- a/src/renderer/assets/styles/elements/_form.scss
+++ b/src/renderer/assets/styles/elements/_form.scss
@@ -5,7 +5,7 @@ fieldset {
 
 legend {
 	margin-bottom: $spacing-small;
-	font-weight: $font-weight-semibold;
+	font-weight: $font-weight-bold;
 }
 
 .fieldset-content {
