Fix editor width for narrow windows

--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -1,6 +1,7 @@
 .editor {
 	@include background-color("background-editor");
 	position: relative;
+	width: 100%;
 	border-radius: $border-radius-input;
 	box-shadow: $box-shadow-inset;
 }
