--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -38,6 +38,7 @@ $font-size-h1: 150%;
 $font-weight-normal: 400;
 $font-weight-bold: 700;
 $line-height: 1.7;
+$paragraph-spacing: 1em;
 
 // Spacing
 $height-header: 37px;
@@ -47,6 +48,11 @@ $spacing-small: 10px;
 $spacing-rel-small: 3.5vw;
 $spacing-rel-large: 6vw;
 
+// Screens
+$screen-tablet: 1024px;
+$screen-desktop: 1224px;
+$screen-large: 1824px;
+
 // Other
 $border-radius-button: 10px;
 $border-radius-input: 5px;
@@ -55,3 +61,5 @@ $box-shadow-inset: inset 0.5px 0.5px 1px 1px rgba(0, 0, 0, 0.13);
 $calendar-cell-size: 40px;
 $input-width: 210px;
 $transition: 0.2s;
+$max-editor-width: 860px;
+$editor-buttons-width: $calendar-cell-size + $spacing-medium;
