--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -1,7 +1,7 @@
 .editor {
 	@include background-color("background-editor");
 	position: relative;
-	width: 100%;
+	max-width: $max-editor-width;
 	border-radius: $border-radius-input;
 	box-shadow: $box-shadow-inset;
 }
@@ -11,12 +11,20 @@
 	grid-template-rows: auto auto 1fr;
 	width: 100%;
 	height: 100%;
-	padding: $spacing-rel-small (2 * $spacing-rel-small) $spacing-rel-small $spacing-rel-small;
 	overflow-y: auto;
+
+	@media (max-width: $screen-desktop) {
+		padding: 1.25 * $spacing-large (1.25 * $spacing-large + $editor-buttons-width) 1.25 *
+			$spacing-large 1.25 * $spacing-large;
+	}
+
+	@media (min-width: $screen-desktop + 1px) {
+		padding: (2 * $spacing-large) (2 * $spacing-large + $editor-buttons-width) (2 * $spacing-large)
+			(2 * $spacing-large);
+	}
 }
 
 .editor-title-wrapper {
-	margin-bottom: $spacing-small;
 	font-weight: $font-weight-bold;
 	font-size: 150%;
 }
@@ -46,5 +54,5 @@
 }
 
 .editor-text-wrapper .public-DraftStyleDefault-block {
-	margin-bottom: $spacing-small;
+	margin-top: $paragraph-spacing;
 }
