Improve organization of calendar styles

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -10,6 +10,7 @@ $themes: (
 		"main": #4e8bd2,
 		"main-hover": #447ab8,
 		"text": #353535,
+		"text-button": #ffffff,
 		"text-disabled": #b7b7b7,
 		"text-faded": #727272,
 		"text-placeholder": #757575,
@@ -24,6 +25,7 @@ $themes: (
 		"main": #4c81bf,
 		"main-hover": #4371a7,
 		"text": #d0d0d0,
+		"text-button": #ffffff,
 		"text-disabled": #4e4e4e,
 		"text-faded": #a1a1a1,
 		"text-placeholder": #757575,
