Improve names and grouping of Sass variables

--- a/src/renderer/assets/styles/components/_banner.scss
+++ b/src/renderer/assets/styles/components/_banner.scss
@@ -20,10 +20,10 @@
 
 .password-creation-banner,
 .password-prompt-banner {
-	margin-top: $spacing-large;
+	margin-top: $spacing-abs-large;
 }
 
 .password-update-banner {
 	height: 1em;
-	margin-top: $spacing-medium;
+	margin-top: $spacing-abs-medium;
 }
