--- a/src/renderer/assets/styles/components/_password-views.scss
+++ b/src/renderer/assets/styles/components/_password-views.scss
@@ -1,6 +1,6 @@
 .password-creation-form input,
 .password-prompt-form input {
-	margin: $spacing-large $spacing-medium 0 0;
+	margin: $spacing-abs-large $spacing-abs-medium 0 0;
 }
 
 .password-creation-banner,
