--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -32,9 +32,9 @@ $themes: (
 	),
 ) !default;
 
-// Fonts
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+// Text
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial",
+	sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-size-base: 16px;
 $font-size-h1: 150%;
 $font-weight-normal: 400;
@@ -43,14 +43,20 @@ $line-height: 1.7;
 $paragraph-spacing: 1em;
 
 // Spacing
-$height-header: 37px;
-$spacing-large: 30px;
-$spacing-medium: 15px;
-$spacing-small: 10px;
+$spacing-abs-small: 10px;
+$spacing-abs-medium: 15px;
+$spacing-abs-large: 30px;
 $spacing-rel-small: 3.5vw;
 $spacing-rel-large: 6vw;
 
-// Screens
+// Sizes
+$editor-max-width: 860px;
+$header-height: 37px;
+$input-height: 40px;
+$input-width: 210px;
+$editor-buttons-width: $input-height + $spacing-abs-medium;
+
+// Screen sizes (media query breakpoints)
 $screen-tablet: 1024px;
 $screen-desktop: 1224px;
 $screen-large: 1824px;
@@ -60,8 +66,4 @@ $border-radius-button: 10px;
 $border-radius-input: 5px;
 $box-shadow: 0.5px 0.5px 1px 1px rgba(0, 0, 0, 0.18);
 $box-shadow-inset: inset 0.5px 0.5px 1px 1px rgba(0, 0, 0, 0.13);
-$calendar-cell-size: 40px;
-$input-width: 210px;
 $transition: 0.2s;
-$max-editor-width: 860px;
-$editor-buttons-width: $calendar-cell-size + $spacing-medium;
