--- a/src/renderer/assets/styles/components/_app.scss
+++ b/src/renderer/assets/styles/components/_app.scss
@@ -14,6 +14,6 @@ body,
 header {
 	position: absolute;
 	width: 100%;
-	height: $height-header;
+	height: $header-height;
 	-webkit-app-region: drag;
 }
