--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -1,7 +1,7 @@
 .editor {
 	@include background-color("background-editor");
 	position: relative;
-	max-width: $max-editor-width;
+	max-width: $editor-max-width;
 	border-radius: $border-radius-input;
 	box-shadow: $box-shadow-inset;
 }
@@ -14,13 +14,13 @@
 	overflow-y: auto;
 
 	@media (max-width: $screen-desktop) {
-		padding: 1.25 * $spacing-large (1.25 * $spacing-large + $editor-buttons-width) 1.25 *
-			$spacing-large 1.25 * $spacing-large;
+		padding: 1.25 * $spacing-abs-large (1.25 * $spacing-abs-large + $editor-buttons-width) 1.25 *
+			$spacing-abs-large 1.25 * $spacing-abs-large;
 	}
 
 	@media (min-width: $screen-desktop + 1px) {
-		padding: (2 * $spacing-large) (2 * $spacing-large + $editor-buttons-width) (2 * $spacing-large)
-			(2 * $spacing-large);
+		padding: (2 * $spacing-abs-large) (2 * $spacing-abs-large + $editor-buttons-width)
+			(2 * $spacing-abs-large) (2 * $spacing-abs-large);
 	}
 }
 
@@ -33,10 +33,10 @@
 	@include background-color("background");
 	position: absolute;
 	top: 0;
-	right: $spacing-medium;
+	right: $spacing-abs-medium;
 	bottom: 0;
-	width: $calendar-cell-size;
-	height: 4 * $calendar-cell-size;
+	width: $input-height;
+	height: 4 * $input-height;
 	margin-top: auto;
 	margin-bottom: auto;
 	border-radius: $border-radius-button;
