--- a/src/renderer/assets/styles/components/_app.scss
+++ b/src/renderer/assets/styles/components/_app.scss
@@ -8,9 +8,14 @@ body,
 	height: 100%;
 }
 
+body {
+	overflow: hidden;
+}
+
 .app {
 	@include background-color("background");
 	position: relative;
+	overflow: auto; // Scrollbar must be here instead of in <body> so it can be styled based on theme
 }
 
 header {
