--- a/src/renderer/assets/styles/styles.scss
+++ b/src/renderer/assets/styles/styles.scss
@@ -9,6 +9,7 @@
 // Elements
 @import "elements/form";
 @import "elements/input";
+@import "elements/scrollbar";
 
 // Components
 @import "components/app";
