Style "Go to date" dialog

--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -35,6 +35,13 @@
 	}
 }
 
+// "Go to date" overlay
+.go-to-date-overlay {
+	input {
+		margin: 0 $spacing-abs-small;
+	}
+}
+
 // Import overlay
 
 .import-overlay {
