Update dark colors

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -3,8 +3,8 @@ $themes: (
 	"light": (
 		"background": #e2e2e2,
 		"background-hover": #d1d1d1,
-		"background-editor": #f9f9f9,
-		"background-editor-hover": #d4d4d4,
+		"background-input": #f9f9f9,
+		"background-input-hover": #d4d4d4,
 		"button-disabled": #d2d2d2,
 		"error": #d23939,
 		"main": #4e8bd2,
@@ -18,10 +18,10 @@ $themes: (
 		"scrollbar-hover": rgba(0, 0, 0, 0.3),
 	),
 	"dark": (
-		"background": #242326,
-		"background-hover": #3f3f41,
-		"background-editor": #373739,
-		"background-editor-hover": #323234,
+		"background": #1d1d1f,
+		"background-hover": #272629,
+		"background-input": #2f2f31,
+		"background-input-hover": #323234,
 		"button-disabled": #1d1d1d,
 		"error": #d23939,
 		"main": #4c81bf,
