--- a/src/renderer/assets/styles/components/_editor.scss
+++ b/src/renderer/assets/styles/components/_editor.scss
@@ -1,5 +1,5 @@
 .editor {
-	@include background-color("background-editor");
+	@include background-color("background-input");
 	position: relative;
 	border-radius: $border-radius-input;
 	box-shadow: $box-shadow-inset;
